k8s/03-postgres.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: postgresql
  namespace: relay
  labels:
    app: postgresql
spec:
  serviceName: "postgresql-service"
  replicas: 1
  selector:
    matchLabels:
      app: postgresql
  template:
    metadata:
      labels:
        app: postgresql
    spec:
      containers:
        - name: postgresql
          image: postgres:15
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: postgresql-data
              mountPath: /var/lib/postgresql/data  # Mount the volume to the PostgreSQL data directory
      volumes:
        - name: postgresql-data
          persistentVolumeClaim:
            claimName: postgres-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: postgresql-service
  namespace: relay
  labels:
    app: postgresql
spec:
  ports:
    - port: 5432
      targetPort: 5432
  clusterIP: None  # This ensures that each pod has its own stable DNS entry (for StatefulSets)
  selector:
    app: postgresql
