k8s/05-server.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-server
  namespace: relay
  labels:
    app: app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
    spec:
      containers:
        - name: app-server
          image: ed18c/relay-app:latest
          ports:
            - containerPort: 3000
          readinessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 5  # Wait 5 seconds before first check
            periodSeconds: 10       # Check every 10 seconds
          livenessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 15 # Wait 15 seconds before first check
            periodSeconds: 20
---
apiVersion: v1
kind: Service
metadata:
  name: app-service
  namespace: relay
  labels:
    app: app
spec:
  type: ClusterIP
  selector:
    app: app
  ports:
    - port: 3000
      targetPort: 3000
      protocol: TCP
# apiVersion: v1
# kind: Service
# metadata:
#   name: app-service
#   labels:
#     app: app
# spec:
#   selector:
#     app: app
#   type: NodePort
#   ports:
#     - port: 3000
#       targetPort: 3000
#       nodePort: 30007
