k8s/06-authentication.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-server
  namespace: relay
  labels:
    app: auth
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth
  template:
    metadata:
      labels:
        app: auth
    spec:
      containers:
        - name: auth-server
          image: ed18c/relay-auth:latest
          ports:
            - containerPort: 4000
---
apiVersion: v1
kind: Service
metadata:
  name: auth-service
  namespace: relay
  labels:
    app: auth
spec:
  type: ClusterIP
  selector:
    app: auth
  ports:
    - port: 4000
      targetPort: 4000
      protocol: TCP
# apiVersion: v1
# kind: Service
# metadata:
#   name: auth-service
#   labels:
#     app: auth
# spec:
#   selector:
#     app: auth
#   type: NodePort
#   ports:
#     - port: 4000
#       targetPort: 4000
#       nodePort: 30008
