k8s/server.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-server
  labels:
    app: app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
    spec:
      containers:
        - name: app-server
          image: ed18c/relay-app:latest
          ports:
            - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: app-service
  labels:
    app: app
spec:
  selector:
    app: app
  type: NodePort
  ports:
    - port: 3000
      targetPort: 3000
      nodePort: 30007
